# FeatureBeats

./: .env.example  .gitattributes  .gitignore  00_Setup_and_Installation.ipynb  01_Week1_Data_Setup_EDA.ipynb  02_Week2_Baseline_Modeling.ipynb  03_Week3_XGBoost_SHAP.ipynb  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  FINAL_PERFORMANCE_REPORT.md  FIXES_SUMMARY.md  NOTEBOOK_REVIEW_FINAL.md  PROJECT_STATUS_AND_NEXT_STEPS.md  README.md  README_FINAL_RESULTS.md  app.py  config.yaml  pyproject.toml  requirements.txt  test_webapp.py  train_engineered_models.py
data/: README.md
data/raw/: top100_tracks.csv
examples/: quick_start.py
models/: baseline_logreg.pkl  baseline_metrics.csv  best_sampling_model.pkl  engineered_features_comparison.csv  final_xgboost.pkl  logreg_engineered.pkl  sampling_methods_comparison.csv  scaler.pkl  scaler_engineered.pkl  shap_values.npy  xgboost_engineered.pkl  xgboost_metrics.csv
notebooks/: 00_Setup_and_Installation.ipynb  01_Week1_Data_Setup_EDA.ipynb  01_exploratory_data_analysis.ipynb  02_Week2_Baseline_Modeling.ipynb  03_Week3_XGBoost_SHAP.ipynb  04_Advanced_SMOTE_Sampling.ipynb  05_Feature_Engineering.ipynb  train_engineered_models.ipynb
src/featurebeats/models/: spotify_track.py
src/featurebeats/utils/: config.py  data_loader.py  visualization.py
tests/: test_spotify_track.py
